# django-tutorial-2024-03-23

./: LICENSE  README.md  pyproject.toml
mysite/mysite/: settings.py
mysite/polls/: admin.py  views.py
mysite/polls/migrations/: 0001_initial.py
mysite/polls/static/polls/: style.css
mysite/polls/templates/polls/: detail.html
