[tool.poetry]
name = "django-tutorial"
version = "0.1.0"
description = ""
authors = ["Ülgen Sarıkavak <ulgensrkvk+github@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
